# kotlin-platform

./: .gitignore  CLAUDE.md  README.md  build.gradle  check-symbols.sh  local.properties  modify.sh  ruleset.yml  settings.gradle
.github/workflows/: build-and-verify-alignment.yml
dash-sdk-android/: .gitignore  build.gradle
dash-sdk-android/src/androidTest/java/org/dashj/platform/android/: ExampleInstrumentedTest.java
dash-sdk-android/src/main/cpp/: CMakeLists.txt
dash-sdk-android/src/main/rust/: Cargo.toml  build.rs  cbindgen.toml  rust-toolchain.toml
dash-sdk-android/src/main/rust/src/: fermented.rs  lib.rs
dash-sdk-bindings/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  contested-resource-value-fqn.patch  rust-toolchain.toml
dash-sdk-bindings/src/: fermented.rs
dash-sdk-java/: .gitignore  README.md  build.gradle  ignore.py
dash-sdk-java/src/main/cpp/: CMakeLists.txt  clone.h  config.h  context_provider.cpp  context_provider.h  conversions.h  dpp.h  int128.h  java_list_value.cpp  java_map_string_value.cpp  java_map_valuemap.cpp  java_vm.cpp  jnihelper.h  sdk.cpp  utils.h  wrapper.h
dash-sdk-java/src/main/swig/: Arr_u8_20.i  Arr_u8_32.i  Arr_u8_36.i  Vec_u8.i  binary_data.i  contract_bounds.i  data_contract.i  default_class.i  document.i  document_properties.i  dpp.i  drive.i  enums.i  example.i  hash.i  i128.i  identifier.i  identity.i  identity_public_key.i  identity_public_key_enums.i  ignore.i  keycount.i  keyid.i  lists.i  myexception.i  platform_value.i  platform_value_array.i  result.i  revision.i  root.i  rs_sdk.i  sdk.i  state_transition.i  tests.i  timestamp_millis.i  uint8_array.i  uint8_array_20.i  vote.i
dash-sdk-java/src/main/swig/generics/: byte_array.i  lists.i  maps.i  primitive_lists.i  result.i  sets.i
dash-sdk-java/src/test/java/org/dashj/platform/sdk/: BaseTest.java  BinaryDataTest.java  ContractBoundsTest.java  CoreTest.java  DataContractTest.java  DocumentTest.java  GenericsTest.java  IdentifierTest.java  IdentityObjectTest.java  IdentityPublicKeyTest.java  IdentityTest.java  SdkBaseTest.java  ValueTest.java  VoteObjectTest.java  VoteTest.java
dashj-platform-android/: .gitignore  build.gradle
dashj-platform-android-simple/: .gitignore  build.gradle
dashj-platform-android-simple/src/main/rust/: Cargo.toml  build.backup
dashj-platform-android-simple/src/main/rust/src/: lib.rs
dashj-platform-android/src/main/: AndroidManifest.xml
dashj-platform-android/src/main/cpp/: CMakeLists.txt
dashj-platform-android/src/main/rust/: Cargo.toml
dashj-platform-android/src/main/rust/src/: fermented.rs  lib.rs
dashj-platform-android/src/test/java/org/dashj/platform/android/: ExampleUnitTest.java
dpp/: build.gradle  ktlint.gradle
dpp/src/main/java/org/dashj/platform/dapiclient/: DapiClient.kt  MaxRetriesReachedException.kt  NoAvailableAddressesForRetryException.kt  SystemIds.kt
dpp/src/main/java/org/dashj/platform/dashpay/: BlockchainIdentity.kt  ContactRequest.kt  ContactRequests.kt  DashPayWalletExtension.kt  IdentityStatus.kt  Profiles.kt  UsernameInfo.kt  UsernameRequestStatus.kt  UsernameStatus.kt
dpp/src/main/java/org/dashj/platform/dpp/: Extensions.kt
dpp/src/main/java/org/dashj/platform/sdk/: Client.kt
dpp/src/main/java/org/dashj/platform/wallet/: IdentityVerify.kt  IdentityVerifyDocument.kt  TxMetadata.kt  TxMetadataDocument.kt  TxMetadataItem.kt
dpp/src/main/proto/: core.proto  wallet-utils.proto
dpp/src/test/kotlin/org/dashj/platform/: PlatformTests.kt
dpp/src/test/kotlin/org/dashj/platform/dapiclient/: BaseTest.kt  DapiClientTest.kt  DapiGrpcClientTest.kt
dpp/src/test/kotlin/org/dashj/platform/dashpay/: BlockchainIdentityTest.kt  (+2 more)
examples/: .gitignore  build.gradle
examples/src/main/java/org/dashj/platform/: PlatformExplorer.kt
examples/src/main/kotlin/dashj/org/platform/: AllContestedNames.kt  ContestedNames.kt  CreateTxMetadata.kt  CreateTxMetadataTest.kt  DefaultIdentity.kt  DisplayContracts.kt  DisplayIdentityKeys.kt  DisplayTxMetadata.kt  PlatformExplorer.kt  PreorderSalts.kt  PreorderedNames.kt  RegisteredNames.kt  RegisteredNamesWithBalance.kt  RestoreIdentities.kt  ShowContactRequests.kt  ShowProfiles.kt  VerifyIdentityDocuments.kt
java-sdk-bindings/: .gitignore  README.md  build.gradle  ignore.py  swig.sh
java-sdk-bindings/src/main/c/: sdk.cpp
java-sdk-bindings/src/main/cpp/: CMakeLists.txt  context_provider.cpp  dpp.h  java_map_keyid_identitypublickey.cpp  sdk.cpp
java-sdk-bindings/src/main/java/org/dash/sdk/: ContractBounds_Tag.java  Identifier.java  Identity.java  IdentityV0.java  Identity_Tag.java  KeyID.java  KeyType.java  Purpose.java  Result_ok_dpp_identity_identity_Identity_err_String.java  SWIGTYPE_p_dpp_identity_identity_public_key_purpose_Purpose.java  SWIGTYPE_p_dpp_identity_identity_public_key_security_level_SecurityLevel.java  SWIGTYPE_p_p_dpp_identity_identity_public_key_IdentityPublicKey.java  SWIGTYPE_p_p_dpp_identity_identity_public_key_KeyID.java  SWIGTYPE_p_unsigned_char.java  dpp_identity_identity_public_key_KeyCount.java  example.java  exampleJNI.java
java-sdk-bindings/src/main/swig/: Vec_u8.i  binary_data.i  contract_bounds.i  default_class.i  dpp.i  enums.i  example.i  identifier.i  identity.i  identity_public_key.i  identity_public_key_enums.i  ignore.i  result.i  timestamp_millis.i  uint8_array_20.i
java-sdk-bindings/src/test/java/org/dash/sdk/: BaseTest.java  BinaryDataTest.java  ContractBoundsTest.java  GenericsTest.java  IdentifierTest.java  IdentityPublicKeyTest.java  IdentityTest.java
platform-mobile/: .env  .env.example  Cargo.toml  README.md  dashwallet-contract.json  mainnet.env  rust-toolchain.toml  testnet.env
platform-mobile/src/: clone.rs  config.rs  core.rs  custom.rs  data_contracts.rs  fetch_document.rs  fetch_identity.rs  identity.rs  lib.rs  logs.rs  operators.rs  provider.rs  put.rs  put_test.rs  sdk.rs  state_transition.rs  voting.rs
platform-mobile/src/tests/: documents.rs  mod.rs
rs-sdk/: Cargo.toml  cbindgen.toml
rs-sdk/src/: fermented.rs
scripts/: build.sh  verify-16kb-alignment.sh
tools/: build.gradle
(+111 files in other folders)
