[package]
name = "dash-sdk-bindings"
version = "2.0.2"
edition = "2021"

[dependencies]
ferment = { git = "https://github.com/dashpay/ferment", tag = "v0.2.3", package = "ferment" }
ferment-macro = { git = "https://github.com/dashpay/ferment", tag = "v0.2.3", package = "ferment-macro" }
platform-mobile = { path = "../platform-mobile"}
# dependencies required by ferment
platform-value = { path = "../../platform/packages/rs-platform-value" }
#data-contracts = { path = "../../platform/packages/data-contracts" }
dpp = { path = "../../platform/packages/rs-dpp" }
dash-sdk = { path = "../../platform/packages/rs-sdk"}
drive-proof-verifier = { path = "../../platform/packages/rs-drive-proof-verifier"}
#rs-dapi-client = { path = "../../platform/packages/rs-dapi-client", default-features = false}
#platform-version = { path = "../../platform/packages/rs-platform-version" }
drive = { path = "../../platform/packages/rs-drive", default-features = false, features = [
    "verify",
    "serde",
] }
#tokio = { version = "1.34", features = ["full"] }
#tokio-util = "0.7.11"
dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
    "std",
    "secp-recovery",
    "rand",
    "signer",
    "serde",
], default-features = false, tag = "v0.39.6" }
[build-dependencies]
cbindgen = "0.26.0"
ferment-sys = { git = "https://github.com/dashpay/ferment", tag = "v0.2.3", package = "ferment-sys", features = ["cbindgen_only"] }
#ferment-sys = { git = "https://github.com/dashpay/ferment", tag = "v0.2.3", package = "ferment-sys"}
toml = "0.8.8"

[patch.crates-io]
tower-service = { git = "https://github.com/QuantumExplorer/tower", branch = "fix/indexMap2OnV0413" }
tower-layer = { git = "https://github.com/QuantumExplorer/tower", branch = "fix/indexMap2OnV0413" }
tower = { git = "https://github.com/QuantumExplorer/tower", branch = "fix/indexMap2OnV0413" }
rs-x11-hash = { git = "https://github.com/hashengineering/rs-x11-hash", branch = "feat/add-android-support" }

[lib]
crate-type = ["staticlib"]

[features]
default = ["verify"]
verify = []
