[package]
name = "platform-mobile"
version = "1.7.3"
edition = "2021"

[dependencies]
ferment-interfaces = { git = "https://github.com/dashpay/ferment", branch = "feat/opaque-default", package = "ferment-interfaces" }
ferment-macro = { git = "https://github.com/dashpay/ferment", branch = "feat/opaque-default", package = "ferment-macro" }

platform-value = { path = "../../platform/packages/rs-platform-value" }
data-contracts = { path = "../../platform/packages/data-contracts" }
dpns-contract = { path = "../../platform/packages/dpns-contract" }
dashpay-contract = { path = "../../platform/packages/dashpay-contract" }
wallet-utils-contract = { path = "../../platform/packages/wallet-utils-contract" }
dpp = { path = "../../platform/packages/rs-dpp" }
dash-sdk = { path = "../../platform/packages/rs-sdk" }
rs-dapi-client = { path = "../../platform/packages/rs-dapi-client" }
platform-version = { path = "../../platform/packages/rs-platform-version" }
dapi-grpc = { path = "../../platform/packages/dapi-grpc" }
drive-proof-verifier = { path = "../../platform/packages/rs-drive-proof-verifier" }
drive = { path = "../../platform/packages/rs-drive", default-features = false, features = [
    "verify",
    "serde",
] }
simple-signer = { path = "../../platform/packages/simple-signer" }
dotenvy = { version = "0.15.7", optional = false }
envy = { version = "0.4.2", optional = false }
lazy_static = "1.4.0"
parking_lot = "0.11.0"

http = { version = "0.2.9" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std"] }
tracing = { version = "0.1.37" }
serde = { version = "1.0.152", default-features = false, features = ["rc"] }
hex = "0.4.3"
lru = "0.12.3"
quote = "1.0.35"
syn = "2.0.53"
serde_json = "1.0.115"
sha2 = "0.10.8"
dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
    "std",
    "secp-recovery",
    "rand",
    "signer",
    "serde",
], default-features = false, branch = "master" }
dashcore_hashes = { git = "https://github.com/dashpay/rust-dashcore" }
# dashcore-rpc is only needed for core rpc; TODO remove once we have correct core rpc impl
dashcore-rpc = { git = "https://github.com/dashpay/rust-dashcore-rpc", tag = "v0.15.4" }
rand = "0.8.5"
base64 = "0.13"
tonic = { version = "0.11", features = [
    "codegen",
    "prost",
], default-features = false }
async-trait = "0.1.74"

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2.155"
tracing-logcat = "0.1.0"

#[build-dependencies]
#cbindgen = "0.26.0"
#ferment = { path = "../ferment/ferment" }
#toml = "0.8.8"

[lib]
name = "platform_mobile"
#crate-type = ["staticlib"]
