[package]
name = "rs-sdk-bindings"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ferment-interfaces = { path = "../../ferment/ferment-interfaces" }
ferment-macro = { path = "../../ferment/ferment-macro" }

platform-mobile = { path = "../../platform-mobile"}

platform-value = { path = "../../platform/packages/rs-platform-value" }
#data-contracts = { path = "../../platform/packages/data-contracts" }
dpp = { path = "../../platform/packages/rs-dpp", features = ["all_features"] }
rs-sdk = { path = "../../platform/packages/rs-sdk"}
#rs-dapi-client = { path = "../../platform/packages/rs-dapi-client", default-features = false}
#platform-version = { path = "../../platform/packages/rs-platform-version" }


[build-dependencies]
cbindgen = "0.26.0"
ferment = { path = "../../ferment/ferment" }
toml = "0.8.8"

[lib]
name = "rssdkbindings"
crate-type = ["staticlib"]
