[package]
name = "dash-sdk-bindings"
version = "2.0.0"
edition = "2021"

[dependencies]
dash-sdk = { path = "../../../../../platform/packages/rs-sdk" }
#dash-sdk = { git = "https://github.com/dashpay/platform.git", branch="v1.0-dev" }
ferment-macro = { git = "https://github.com/dashpay/ferment", branch = "feat/opaque-default", package = "ferment-macro" }
ferment-interfaces = { git = "https://github.com/dashpay/ferment", branch = "feat/opaque-default", package = "ferment-interfaces" }

platform-mobile = { path = "../../../../platform-mobile"}

platform-value = { path = "../../../../../platform/packages/rs-platform-value" }
#data-contracts = { path = "../../../../../platform/packages/data-contracts" }
dpp = { path = "../../../../../platform/packages/rs-dpp" }
#rs-dapi-client = { path = "../../../../../platform/packages/rs-dapi-client" }
#platform-version = { path = "../../../../../platform/packages/rs-platform-version" }
dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = [
    "std",
    "secp-recovery",
    "rand",
    "signer",
    "serde",
], default-features = false, tag = "v0.39.6" }
drive = { path = "../../../../../platform/packages/rs-drive", default-features = false, features = [
    "verify",
    "serde",
] }
drive-proof-verifier = { path = "../../../../../platform/packages/rs-drive-proof-verifier"}
ferment = { git = "https://github.com/dashpay/ferment", tag = "v0.2.3", package = "ferment" }

[build-dependencies]
cbindgen = "0.26.0"
# ferment = { git = "https://github.com/dashpay/ferment", tag = "v0.2.3", package = "ferment" }
ferment-sys = { git = "https://github.com/dashpay/ferment", tag = "v0.2.3", package = "ferment-sys", features = ["cbindgen_only"] }
#ferment-sys = { git = "https://github.com/dashpay/ferment", tag = "v0.2.3", package = "ferment-sys" }

[patch.crates-io]
tower-service = { git = "https://github.com/QuantumExplorer/tower", branch = "fix/indexMap2OnV0413" }
tower-layer = { git = "https://github.com/QuantumExplorer/tower", branch = "fix/indexMap2OnV0413" }
tower = { git = "https://github.com/QuantumExplorer/tower", branch = "fix/indexMap2OnV0413" }
# this is required until this PR is merged
rs-x11-hash = { git = "https://github.com/hashengineering/rs-x11-hash", branch = "feat/add-android-support" }

[lib]
crate-type = ["staticlib"]

[features]
default = ["verify"]
verify = []

[target.armv7-linux-androideabi]
rustflags = ["-C", "target-feature=+strict-align"]

[target.aarch64-linux-android]
rustflags = []