[package]
name = "rs-sdk-bindings-simple"
version = "0.1.0"
edition = "2021"

[dependencies]
rs-sdk = { path = "../../../../../platform-upstream/packages/rs-sdk" }

[lib]
name = "rssdkbindings"
crate-type = ["cdylib"]

[patch.crates-io]
tower-service = { git = "https://github.com/QuantumExplorer/tower", branch = "fix/indexMap2OnV0413" }
tower-layer = { git = "https://github.com/QuantumExplorer/tower", branch = "fix/indexMap2OnV0413" }
tower = { git = "https://github.com/QuantumExplorer/tower", branch = "fix/indexMap2OnV0413" }
rs-x11-hash = { path = "../../../../../rs-x11-hash" }